style: update Home component layout and body background, enhance Tailwind CSS configuration

--- a/apps/www/src/components/Home.astro
+++ b/apps/www/src/components/Home.astro
@@ -1,6 +1,6 @@
-<main>
-	<section>
-		<p>Kelsie</p>
+<main class="flex justify-center p-6">
+	<section class="flex-1 max-w-xl">
+		<p class="text-nord">Kelsie</p>
 	</section>
 </main>
 
