--- a/apps/www/src/layouts/Layout.astro
+++ b/apps/www/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import BaseHead from "../components/BaseHead.astro";
 	<head>
 		<BaseHead title={"Kelsie Murphy | Software Engineer"} description={"Kelsie Murphy's Personal Website"} />
 	</head>
-	<body class="bg-background min-h-screen">
+	<body class="bg-stone-100 min-h-screen">
 		<slot />
 	</body>
 </html>
