--- a/apps/www/src/components/Home.astro
+++ b/apps/www/src/components/Home.astro
@@ -1,12 +1,11 @@
 ---
 import { Button } from "@repo/ui/components/ui/button"
 import { Badge } from "@repo/ui/components/ui/badge"
-
 ---
 
 <main class="flex justify-center p-6">
 	<section class="flex-1 max-w-xl">
-		<p class="text-green-500">Kelsie</p>
+		<p class="font-nord">Kelsie</p>
 		<Button size="lg">Hello</Button>
 		<Badge>Badge</Badge>
 	</section>
