--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -67,3 +67,9 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+
+@layer components {
+  .outline-brand {
+    @apply ring-offset-background focus-visible:rounded-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2;
+  }
+}
