--- a/apps/www/src/layouts/Layout.astro
+++ b/apps/www/src/layouts/Layout.astro
@@ -1,13 +1,36 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Navigation from "../components/react/navigation";
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={"Kelsie Murphy | Software Engineer"} description={"Kelsie Murphy's Personal Website"} />
-	</head>
-	<body class="bg-[#f1ede5] min-h-screen antialiased">
-		<slot />
-	</body>
+<script>
+  import Lenis from "lenis";
+
+  const lenis = new Lenis({ lerp: 0.9 });
+
+  function raf(time: number) {
+    lenis.raf(time);
+    requestAnimationFrame(raf);
+  }
+
+  requestAnimationFrame(raf);
+</script>
+
+<html lang="en" class="light">
+  <head>
+    <BaseHead
+      title={"Kelsie Murphy | Software Engineer"}
+      description={"Kelsie Murphy's Personal Website"}
+    />
+  </head>
+  <body
+    class="bg-[#f1ede5] min-h-screen antialiased selection:text-white selection:bg-orange-950"
+  >
+    <main class="flex justify-center p-6">
+      <section class="flex-1 max-w-xl space-y-16">
+        <Navigation />
+        <slot />
+      </section>
+    </main>
+  </body>
 </html>
