--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,8 +1,31 @@
 ---
-import Home from '../components/Home.astro';
-import Layout from '../layouts/Layout.astro';
+import SocialLinks from "../components/react/social-links";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Home />
+  <div class="space-y-4">
+    <div class="flex items-center justify-between h-28 flex-wrap gap-12">
+      <h1 class="font-nord font-bold text-2xl">Kelsie Murphy</h1>
+    </div>
+    <p>
+      I'm interested in creating sustainable and accessible digital experiences.
+      Currently, I'm building web applications for a global energy company as a
+      software engineer consultant at <a
+        class="hover:underline outline-brand"
+        href="https://www.bjss.com/"
+        target="_blank">BJSS</a
+      >.
+    </p>
+    <p>
+      Previously, I studied music education at the University of Aberdeen,
+      before studying at Codeclan in 2023. I volunteered with Scottish Tech Army
+      to build features for the <a
+        class="hover:underline outline-brand"
+        href="https://apps.apple.com/us/app/sta-volunteers/id1632619020"
+        target="_blank">'STA Volunteers'</a
+      > mobile application.
+    </p>
+    <SocialLinks client:only />
+  </div>
 </Layout>
