refactor: simplify theme handling in BaseHead, optimize TextDisperse component, and update package dependencies

--- a/apps/www/src/layouts/Layout.astro
+++ b/apps/www/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Navigation from "../components/react/navigation";
   requestAnimationFrame(raf);
 </script>
 
-<html lang="en" class="light">
+<html lang="en">
   <head>
     <BaseHead
       title={"Kelsie Murphy | Software Engineer"}
