--- a/apps/www/src/pages/about.astro
+++ b/apps/www/src/pages/about.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="font-nord font-bold text-2xl not-prose text-foreground">
         About Me
       </h1>
-      <ProfileImage client:load />
+      <ProfileImage client:only />
     </div>
     <h3>Projects</h3>
     <p>
