--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <div class="space-y-4">
-    <div class="hidden sm:flex items-center justify-between h-28 flex-wrap gap-12">
+    <div class="flex items-center justify-between h-28 flex-wrap gap-12">
       <Name client:load />
     </div>
     <div class="flex sm:hidden items-center justify-between h-28 flex-wrap gap-12">
