--- a/apps/www/src/components/BaseHead.astro
+++ b/apps/www/src/components/BaseHead.astro
@@ -15,7 +15,7 @@ const { title, description, image = "/kelsie-murphy.jpg" } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/jpg" href="/kelsie-murphy.jpg" />
+<link rel="icon" type="image/png" href="/kelsie-murphy.png" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
