--- a/apps/www/src/pages/writing/[...slug].astro
+++ b/apps/www/src/pages/writing/[...slug].astro
@@ -17,7 +17,7 @@ const { Content } = await writing.render();
 ---
 
 <Layout>
-  <article class="prose">
+  <article class="prose pb-32">
     <div>
       {
         writing.data.pubDate && (
