--- a/apps/www/src/layouts/Layout.astro
+++ b/apps/www/src/layouts/Layout.astro
@@ -26,10 +26,19 @@ import Navigation from "../components/react/navigation";
   <body
     class="bg-[#f1ede5] min-h-screen antialiased selection:text-white selection:bg-orange-950"
   >
+    <a
+      href="#main-content"
+      class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 focus:bg-orange-950 focus:text-white focus:p-2 focus:rounded focus:z-50"
+    >
+      Skip to content
+    </a>
+
     <main class="flex justify-center p-6">
       <section class="flex-1 max-w-xl space-y-16">
         <Navigation />
-        <slot />
+        <div id="main-content">
+          <slot />
+        </div>
       </section>
     </main>
   </body>
