--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Name from "../components/react/name";
+import ProjectNavMobile from "../components/react/project-navigation-mobile";
 import SocialLinks from "../components/react/social-links";
 import Layout from "../layouts/Layout.astro";
 ---
