feat: refine project name extraction in ProjectLayout and comment out closed restaurant filter

--- a/apps/www/src/layouts/ProjectLayout.astro
+++ b/apps/www/src/layouts/ProjectLayout.astro
@@ -36,10 +36,9 @@ import ProjectNavigation from "../components/react/project-navigation";
 
     <main class="min-h-screen flex flex-col">
       <ProjectNavigation
-        currentProjectName={Astro.url.pathname.split("/").pop()}
+        currentProjectName={Astro.url.pathname.split("/").filter(Boolean).pop()}
         client:load
       />
-      <p>url new: {JSON.stringify(Astro.url.pathname.split("/"))}</p>
       <section id="main-content" class="flex-1 flex flex-col">
         <slot />
       </section>
