--- a/apps/www/src/components/BaseHead.astro
+++ b/apps/www/src/components/BaseHead.astro
@@ -45,3 +45,6 @@ const { title, description, image = "/kelsie-murphy.jpg" } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Plausible Analytics -->
+<script defer data-domain="kelsiesmurphy.com" src="https://plausible.io/js/script.js"></script>
