--- a/apps/www/src/components/BaseHead.astro
+++ b/apps/www/src/components/BaseHead.astro
@@ -17,6 +17,13 @@ const { title, description, image = "/kelsie-murphy.jpg" } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/png" href="/kelsie-murphy.png" />
 <link
+  rel="preload"
+  href="/fonts/otf/nord-bold.otf"
+  as="font"
+  type="font/woff2"
+  crossorigin="anonymous"
+/>
+<link
   rel="alternate"
   type="application/rss+xml"
   title="Kelsie Murphy's Personal Website"
@@ -47,4 +54,7 @@ const { title, description, image = "/kelsie-murphy.jpg" } = Astro.props;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <!-- Plausible Analytics -->
-<script defer data-domain="kelsiesmurphy.com" src="https://plausible.io/js/script.js"></script>
+<script
+  defer
+  data-domain="kelsiesmurphy.com"
+  src="https://plausible.io/js/script.js"></script>
