--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -18,24 +18,62 @@ import Layout from "../layouts/Layout.astro";
         Kelsie Murphy
       </h1>
     </div>
+
     <p>
-      I'm interested in creating sustainable and accessible digital experiences.
-      Currently, I'm building web applications for a global energy company as a
-      software engineer consultant at <a
-        class="hover:underline"
-        href="https://www.bjss.com/"
-        target="_blank">BJSS</a
-      >.
+      I'm a front-end developer who loves turning thoughtful design into
+      sustainable, accessible digital experiences.
     </p>
+
     <p>
-      Previously, I studied music education at the University of Aberdeen, and
-      then studied at CodeClan in 2023. I volunteered with Scottish Tech Army to
-      build features for the <a
+      Right now, i'm at
+      <a class="hover:underline font-semibold" href="https://www.cgi.com/en" target="_blank">
+        CGI</a
+      >, where I help a major energy company improve its online presence and
+      customer communications.
+    </p>
+
+    <p>
+      Before that, I built web applications with
+      <a
+        class="hover:underline font-semibold"
+        href="https://momentumgroup.com.au/"
+        target="_blank"
+      >
+        The Momentum Group
+      </a>
+      in Australia, and retrained in software development at
+      <a class="hover:underline font-semibold" href="https://codeclan.com/" target="_blank">
+        CodeClan
+      </a>
+      after studying <span class="font-semibold">music education</span> at the University of Aberdeen.
+    </p>
+
+    <p>
+      I've also contributed to open-source and community projects through the
+      <a
+        class="hover:underline font-semibold"
+        href="https://www.scottishtecharmy.org/"
+        target="_blank"
+      >
+        Scottish Tech Army</a
+      >, building React Native apps for causes such as
+      <a
         class="hover:underline"
         href="https://apps.apple.com/us/app/sta-volunteers/id1632619020"
-        target="_blank">'STA Volunteers'</a
-      > mobile application.
+        target="_blank"
+      >
+        STA Volunteers
+      </a>
+      and
+      <a
+        class="hover:underline"
+        href="https://www.euansguide.com/"
+        target="_blank"
+      >
+        Euan's Guide
+      </a>.
     </p>
+
     <SocialLinks client:only />
   </div>
 </Layout>
