chore: update dependencies and add new packages
- Added '@radix-ui/react-tabs' version 1.1.13 and its dependencies.
- Added 'motion' version 12.23.24 and its dependencies.
- Updated various '@radix-ui' packages to their latest versions, including:
  - '@radix-ui/react-collection' to 1.1.7
  - '@radix-ui/react-compose-refs' to 1.1.2
  - '@radix-ui/react-context' to 1.1.2
  - '@radix-ui/react-direction' to 1.1.1
  - '@radix-ui/react-id' to 1.1.1
  - '@radix-ui/react-presence' to 1.1.5
  - '@radix-ui/react-primitive' to 2.1.3
  - '@radix-ui/react-roving-focus' to 1.1.11
  - '@radix-ui/react-slot' to 1.2.3
  - '@radix-ui/react-use-callback-ref' to 1.1.1
  - '@radix-ui/react-use-controllable-state' to 1.2.2
  - '@radix-ui/react-use-effect-event' to 0.0.2
  - '@radix-ui/react-use-layout-effect' to 1.1.1
- Deprecated '@studio-freight/lenis' package with a note to update to 'lenis'.
- Marked 'lodash.get' as deprecated with a suggestion to use optional chaining.

--- a/apps/www/src/layouts/Layout.astro
+++ b/apps/www/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ import Navigation from "../components/react/navigation";
     />
   </head>
   <body
-    class="bg-[#f1ede5] min-h-screen antialiased selection:text-white selection:bg-orange-950"
+    class="bg-[#f3f1ee] min-h-screen text-muted-foreground antialiased selection:text-white selection:bg-orange-950"
   >
     <a
       href="#main-content"
@@ -34,7 +34,7 @@ import Navigation from "../components/react/navigation";
     </a>
 
     <main class="flex justify-center p-6">
-      <section class="flex-1 max-w-xl space-y-16">
+      <section class="flex-1 max-w-2xl space-y-16">
         <Navigation />
         <div id="main-content">
           <slot />
