--- a/apps/www/src/pages/projects/index.astro
+++ b/apps/www/src/pages/projects/index.astro
@@ -1,12 +1,11 @@
 ---
-
+import Layout from "../../layouts/Layout.astro";
 ---
 
-<html>
-  <head>
-    <title>Redirecting...</title>
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
-</html>
+<Layout>
+  <div class="space-y-4">
+    <div class="flex items-center h-28">
+      <h1 class="font-nord font-bold text-2xl text-foreground">Projects</h1>
+    </div>
+  </div>
+</Layout>
