--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Name from "../components/react/name";
-import SocialLinks from "../components/react/social-links";
+import Name from "../components/react/home/name";
+import SocialLinks from "../components/react/home/social-links";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -26,7 +26,11 @@ import Layout from "../layouts/Layout.astro";
 
     <p>
       Right now, i'm at
-      <a class="hover:underline font-semibold" href="https://www.cgi.com/en" target="_blank">
+      <a
+        class="hover:underline font-semibold"
+        href="https://www.cgi.com/en"
+        target="_blank"
+      >
         CGI</a
       >, where I help a major energy company improve its online presence and
       customer communications.
@@ -42,10 +46,15 @@ import Layout from "../layouts/Layout.astro";
         The Momentum Group
       </a>
       in Australia, and retrained in software development at
-      <a class="hover:underline font-semibold" href="https://codeclan.com/" target="_blank">
+      <a
+        class="hover:underline font-semibold"
+        href="https://codeclan.com/"
+        target="_blank"
+      >
         CodeClan
       </a>
-      after studying <span class="font-semibold">music education</span> at the University of Aberdeen.
+      after studying <span class="font-semibold">music education</span> at the University
+      of Aberdeen.
     </p>
 
     <p>
